# agent-harness

./: .gitignore  DESIGN.md  README.md  pyproject.toml
harness/: cli.py  config.py  context.py  deadline.py  diligence.py  loop.py  orchestrator.py  permissions.py  persistence.py  profiles.py  skills.py  types.py
harness/adapters/: __init__.py  anthropic.py  base.py  fake.py  openai_compat.py
harness/integrations/: harbor_agent.py
harness/memory/: store.py
harness/sandbox/: base.py  docker.py  harbor_env.py  local.py
harness/tools/: builtin.py  registry.py
jobs/2026-07-20__03-11-00/: config.json  lock.json  result.json
jobs/2026-07-20__03-11-00/build-pov-ray__5X2pWQF/: config.json  exception.txt  lock.json  result.json
jobs/2026-07-20__03-11-00/build-pov-ray__5X2pWQF/agent/: recording.cast  terminus_2.pane  trajectory.json
tests/: test_adapter_anthropic.py  test_adapter_fake.py  test_adapter_openai.py  test_adapters_base.py  test_cli.py  test_config.py  test_context.py  test_deadline.py  test_diligence.py  test_harbor_agent.py  test_harbor_sandbox.py  test_loop.py  test_memory.py  test_orchestrator.py  test_permissions.py  test_persistence.py  test_profiles.py  test_sandbox_docker.py  test_sandbox_local.py  test_skills.py  test_tools.py  test_types.py
